--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="overlay">
         <h1>Explorez les Énergies Renouvelables</h1>
         <div class="button-container">
-            <button onclick="window.open('https://example.com/monfichier.pdf', '_blank')">Voir le PDF sur le Solaire</button>
+            <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Nos Règlementations</button>
             <button onclick="window.open('https://example.com/monfichier2.pdf', '_blank')">Voir le PDF sur l'Éolien</button>
             <button onclick="window.open('https://example.com/monfichier3.pdf', '_blank')">Voir le PDF sur la Géothermie</button>
             <button onclick="window.open('https://example.com/monfichier4.pdf', '_blank')">Voir le PDF sur la Biomasse</button>
