--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('fond.jpg') no-repeat center center fixed;
+            background: url('https://files.oaiusercontent.com/file-FZ3uppe5IJ2tZRXfvhtuTjZC?se=2024-08-26T15%3A18%3A11Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D67433d61-0857-4437-8793-ccd88fd9e6c2.webp&sig=QJ4YIZ5rwgOnqNecYqNsdU/mNGzbvEw75/VaTDnuZtA%3D') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: white;
