--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Énergies Renouvelables</title>
     <style>
         body {
-            background-color: #32CD32; /* Couleur de fond verte */
+            background-color: #228B22; /* Couleur de fond verte */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
