--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Énergies Renouvelables</title>
     <style>
-        body {
-            background-color: #228B22; /* Couleur de fond verte */
-            font-family: Arial, sans-serif;
+       body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             margin: 0;
-            padding: 0;
+            background: url('https://www.example.com/ton-image.jpg') no-repeat center center fixed;
+            background-size: cover;
+            font-family: 'Arial', sans-serif;
+            color: white;
         }
         .overlay {
             background-color: rgba(0, 0, 0, 0.5); /* Ajouter une couche sombre */
