--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background: url('https://github.com/ARGP31/ARGP/blob/main/fond.jpg?raw=true') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
-            color: green;
+            color: white;
         }
         .overlay {
             background-color: rgba(0, 0, 0, 0.5); /* Ajouter une couche sombre */
