--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('https://github.com/ARGP31/ARGP/blob/main/fond.jpg?raw=true') no-repeat center center fixed;
+            background: url('fond.jpg') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: white;
