--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Explorez les Énergies Renouvelables</h1>
         <div class="button-container">
             <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Nos Règlementations</button>
-            <button onclick="window.open('https://example.com/monfichier2.pdf', '_blank')">Voir le PDF sur l'Éolien</button>
+            <button onclick="window.open('https://www.xp-consulting.fr/2019/10/23/le-client-est-roi-vraiment/', '_blank')">Voir le PDF sur l'Éolien</button>
             <button onclick="window.open('https://example.com/monfichier3.pdf', '_blank')">Voir le PDF sur la Géothermie</button>
             <button onclick="window.open('https://example.com/monfichier4.pdf', '_blank')">Voir le PDF sur la Biomasse</button>
         </div>
