--- a/reglementations.html
+++ b/reglementations.html
@@ -16,6 +16,17 @@
             font-family: 'Arial', sans-serif;
             color: white;
         }
+        .overlay {
+            background-color: rgba(0, 0, 0, 0.5); /* Ajouter une couche sombre */
+            padding: 40px;
+            border-radius: 10px;
+        }
+        
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
 
         .button-container {
             display: flex;
