--- a/reglementations.html
+++ b/reglementations.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site avec 2 Boutons</title>
+    <title>Énergies Renouvelables</title>
     <style>
-        body {
+       body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,42 +21,35 @@
             padding: 40px;
             border-radius: 10px;
         }
-        
         .button-container {
             display: flex;
             flex-direction: column;
             gap: 20px;
         }
-
-        .button-container {
-            display: flex;
-            gap: 20px;
-        }
-
         button {
             padding: 15px 30px;
-            font-size: 16px;
+            font-size: 18px;
             cursor: pointer;
             border: none;
-            background-color: #007BFF;
+            background-color: #4CAF50; /* Vert pour l'écologie */
             color: white;
             border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-
         button:hover {
-            background-color: #0056b3;
+            background-color: #45a049; /* Un vert légèrement plus foncé au survol */
+            transform: translateY(-2px);
         }
     </style>
 </head>
 <body>
-
-    <h1>Bienvenue sur mon site</h1>
-    <div class="button-container">
-        <button onclick="window.open('Conditions de raccordement.pdf')">Conditions de raccordement</button>
-        <button onclick="window.open('https://example.com/pdf2.pdf', '_blank')">Voir PDF 2</button>
+    <div class="overlay">
+        <h1>Explorez les Énergies Renouvelables</h1>
+        <div class="button-container">
+            <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Conditions de raccordement</button>
+            <button onclick="window.open('https://www.xp-consulting.fr/2019/10/23/le-client-est-roi-vraiment/', '_blank')">Voir le PDF sur l'Éolien</button>
+        </div>
     </div>
-
 </body>
 </html>
