--- a/reglementations.html
+++ b/reglementations.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('LOGO ARGP.png') no-repeat center center fixed;
+            background: url('PARTAGE.png') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: white;
