--- a/reglementations.html
+++ b/reglementations.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('PARTAGE.png') no-repeat center center fixed;
+            background: url('fond.jpg') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: white;
@@ -45,10 +45,11 @@
 </head>
 <body>
     <div class="overlay">
-        <h1>Explorez les Énergies Renouvelables</h1>
+        <h1>Nos règlementations : </h1>
         <div class="button-container">
-            <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Conditions de raccordement</button>
-            <button onclick="window.open('https://www.xp-consulting.fr/2019/10/23/le-client-est-roi-vraiment/', '_blank')">Voir le PDF sur l'Éolien</button>
+            <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Conditions de raccordement :</button>
+            <button onclick="window.open('Procédure de raccordement.pdf', '_blank')">Procédure de raccordement :</button>
+             <button onclick="window.open('test', '_blank')">Règles techniques :</button>
         </div>
     </div>
 </body>
