--- a/reglementations.html
+++ b/reglementations.html
@@ -31,14 +31,14 @@
             font-size: 18px;
             cursor: pointer;
             border: none;
-            background-color: #4CAF50; /* Vert pour l'écologie */
+            background-color: #96CD32; /* Vert pour l'écologie */
             color: white;
             border-radius: 5px;
             transition: all 0.3s ease;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         button:hover {
-            background-color: #45a049; /* Un vert légèrement plus foncé au survol */
+            background-color: #86BA2B; /* Un vert légèrement plus foncé au survol */
             transform: translateY(-2px);
         }
     </style>
