--- a/reglementations.html
+++ b/reglementations.html
@@ -48,7 +48,7 @@
         <h1>Nos règlementations : </h1>
         <div class="button-container">
             <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Conditions de raccordement :</button>
-            <button onclick="window.open('Procédure de raccordement.pdf', '_blank')">Procédure de raccordement :</button>
+            <button onclick="window.open('Procedure de raccordement.pdf', '_blank')">Procédure de raccordement :</button>
              <button onclick="window.open('test', '_blank')">Règles techniques :</button>
         </div>
     </div>
