--- a/reglementations.html
+++ b/reglementations.html
@@ -31,7 +31,7 @@
             font-size: 18px;
             cursor: pointer;
             border: none;
-            background-color: #41A57D; /* Vert pour l'écologie */
+            background-color: #4BC3C3; /* Vert pour l'écologie */
             color: white;
             border-radius: 5px;
             transition: all 0.3s ease;
