--- a/reglementations.html
+++ b/reglementations.html
@@ -38,7 +38,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         button:hover {
-            background-color: #3C9B75; /* Un vert légèrement plus foncé au survol */
+            background-color: #43B5B5; /* Un vert légèrement plus foncé au survol */
             transform: translateY(-2px);
         }
     </style>
