--- a/reglementations.html
+++ b/reglementations.html
@@ -13,7 +13,7 @@
             margin: 0;
             background: url('fond.jpg') no-repeat center center fixed;
             background-size: cover;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Public Sans', sans-serif;
             color: white;
         }
         .overlay {
