--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             background: url('fond.jpg') no-repeat center center fixed;
             background-size: cover;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Public Sans', sans-serif;
             color: white;
         }
         .overlay {
@@ -31,14 +31,14 @@
             font-size: 18px;
             cursor: pointer;
             border: none;
-            background-color: #4CAF50; /* Vert pour l'écologie */
+            background-color: #4BC3C3; /* Vert pour l'écologie */
             color: white;
             border-radius: 5px;
             transition: all 0.3s ease;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         button:hover {
-            background-color: #45a049; /* Un vert légèrement plus foncé au survol */
+            background-color: #43B5B5; /* Un vert légèrement plus foncé au survol */
             transform: translateY(-2px);
         }
     </style>
