--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 </head>
 <body>
     <div class="overlay">
-        <h1>Explorez les Énergies Renouvelables</h1>
+        <h1>Forum ARGP Équipe BT 2024 :</h1>
         <div class="button-container">
-            <button onclick="window.open('reglementations.html', '_blank')">Nos Règlementations</button>
-            <button onclick="window.open('https://www.xp-consulting.fr/2019/10/23/le-client-est-roi-vraiment/', '_blank')">Voir le PDF sur l'Éolien</button>
-            <button onclick="window.open('https://example.com/monfichier3.pdf', '_blank')">Voir le PDF sur la Géothermie</button>
-            <button onclick="window.open('https://example.com/monfichier4.pdf', '_blank')">Voir le PDF sur la Biomasse</button>
+            <button onclick="window.open('https://youtu.be/ISu57B0Grt8', '_blank')">Présentation de l'agence : </button>
+             <button onclick="window.open('reglementations.html', '_blank')">Règlementations des Raccordements : </button>
+            <button onclick="window.open('https://example.com/monfichier3.pdf', '_blank')">Règles de base pour les demandes de raccordements : </button>
+            <button onclick="window.open('https://example.com/monfichier4.pdf', '_blank')">Liens utiles : </button>
         </div>
     </div>
 </body>
