--- a/liens.html
+++ b/liens.html
@@ -47,8 +47,8 @@
     <div class="overlay">
         <h1>Nos règlementations : </h1>
         <div class="button-container">
-            <button onclick="window.open('Conditions de raccordement.pdf', '_blank')">Conditions de raccordement :</button>
-            <button onclick="window.open('Procedure de raccordement.pdf', '_blank')">Procédure de raccordement :</button>
+            <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Portail Raccordement : </button>
+            <button onclick="window.open('https://www.enedis.fr', '_blank')">Enedis : </button>
              <button onclick="window.open('test', '_blank')">Règles techniques :</button>
         </div>
     </div>
