--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button onclick="window.open('https://youtu.be/ISu57B0Grt8', '_blank')">Présentation de l'agence : </button>
              <button onclick="window.open('reglementations.html', '_blank')">Règlementations des Raccordements : </button>
             <button onclick="window.open('https://example.com/monfichier3.pdf', '_blank')">Règles de base pour les demandes de raccordements : </button>
-            <button onclick="window.open('https://example.com/monfichier4.pdf', '_blank')">Liens utiles : </button>
+            <button onclick="window.open('liens.html', '_blank')">Liens utiles : </button>
         </div>
     </div>
 </body>
