--- a/liens.html
+++ b/liens.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="overlay">
-        <h1>Nos règlementations : </h1>
+        <h1>Liens utiles : </h1>
         <div class="button-container">
             <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Portail Raccordement : </button>
             <button onclick="window.open('https://www.enedis.fr', '_blank')">Enedis : </button>
