--- a/liens.html
+++ b/liens.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Énergies Renouvelables</title>
+    <title>liens utiles</title>
     <style>
        body {
             display: flex;
