--- a/presentation.html
+++ b/presentation.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('fond PAGE 2.jpg') no-repeat center center fixed;
+            background: url('fond equipe.jpg') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Public Sans', sans-serif;
             color: white;
@@ -47,8 +47,8 @@
     <div class="overlay">
         <h1>Liens utiles : </h1>
         <div class="button-container">
-            <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Portail Raccordement : </button>
-            <button onclick="window.open('https://www.enedis.fr', '_blank')">Enedis : </button>
+            <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Le metier de Chargé de Conception : </button>
+            <button onclick="window.open('https://www.enedis.fr', '_blank')">Le metier de Chargé de Conception : </button>
              <button onclick="window.open('test', '_blank')">Règles techniques :</button>
         </div>
     </div>
