--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="overlay">
         <h1>Forum ARGP Équipe BT 2024 :</h1>
         <div class="button-container">
-            <button onclick="window.open('https://youtu.be/ISu57B0Grt8', '_blank')">Présentation de l'agence : </button>
+            <button onclick="window.open('presentation.html', '_blank')">Présentation de l'agence : </button>
              <button onclick="window.open('reglementations.html', '_blank')">Règlementations des raccordements : </button>
             <button onclick="window.open('LOGO ARGP.png', '_blank')">Simplification pour les demandes de raccordements : </button>
             <button onclick="window.open('liens.html', '_blank')">Liens utiles : </button>
