--- a/presentation.html
+++ b/presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>liens utiles</title>
+    <title>Présentation de l'agence</title>
     <style>
        body {
             display: flex;
@@ -47,9 +47,9 @@
     <div class="overlay">
         <h1>Liens utiles : </h1>
         <div class="button-container">
-            <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Le metier de Chargé de Conception : </button>
-            <button onclick="window.open('https://www.enedis.fr', '_blank')">Le metier de Chargé de Conception : </button>
-             <button onclick="window.open('test', '_blank')">Règles techniques :</button>
+            <button onclick="window.open('FICHE CC.pdf', '_blank')">Le metier de Chargé de Conception : </button>
+            <button onclick="window.open('FICHE IR.pdf', '_blank')">Le metier d'Interlocuteur Raccordement : </button>
+             <button onclick="window.open('COORDONEES.pdf', '_blank')">Coordonées utiles :</button>
         </div>
     </div>
 </body>
