--- a/liens.html
+++ b/liens.html
@@ -49,7 +49,7 @@
         <div class="button-container">
             <button onclick="window.open('https://connect-racco.enedis.fr/prac-internet/custom/C5E/accueil', '_blank')">Portail Raccordement : </button>
             <button onclick="window.open('https://www.enedis.fr', '_blank')">Enedis : </button>
-             <button onclick="window.open('test', '_blank')">Règles techniques :</button>
+             <button onclick="window.open('https://www.rte-france.com/projets/nos-projets/raccordement-enr-occitanie#Lesdocuments', '_blank')">Schéma S3R :</button>
         </div>
     </div>
 </body>
