--- a/presentation.html
+++ b/presentation.html
@@ -49,7 +49,7 @@
         <div class="button-container">
             <button onclick="window.open('FICHE CC.pdf', '_blank')">Le metier de Chargé de Conception : </button>
             <button onclick="window.open('FICHE IR.pdf', '_blank')">Le metier d'Interlocuteur Raccordement : </button>
-             <button onclick="window.open('COORDONEES.pdf', '_blank')">Coordonées utiles :</button>
+             <button onclick="window.open('COORDONNEES.pdf', '_blank')">Coordonées utiles :</button>
         </div>
     </div>
 </body>
