--- a/reglementations.html
+++ b/reglementations.html
@@ -21,6 +21,8 @@
             <button class="btn btn-lg btn-custom"
                 onclick="window.open('Procedure de raccordement.pdf', '_blank')">Procédure de
                 traitement des demandes (PRO-RES_67E)</button>
+            <button class="btn btn-lg btn-custom"
+                onclick="window.open('Référentiel Technique.pdf', '_blank')">Référentiel Technique Applicable (NMO-RAC_001E)</button>
         </div>
     </div>
 
